--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
         <div class="mainvisual">
           <div class="mainvisual_container">
             <div class="slides_sp slide">
-              <img src="img/slide/slide1_sp.png">
-              <img src="img/slide/slide2_sp.png">
-              <img src="img/slide/slide3_sp.png">
+              <img src="img/slide/slide1_sp.png" alt="slide1">
+              <img src="img/slide/slide2_sp.png" alt="slide2">
+              <img src="img/slide/slide3_sp.png" alt="slide3">
             </div>
             <div class="slides_pc slide">
-              <img src="img/slide/slide1_pc.png">
-              <img src="img/slide/slide2_pc.png">
-              <img src="img/slide/slide3_pc.png">
+              <img src="img/slide/slide1_pc.png" alt="slide1">
+              <img src="img/slide/slide2_pc.png" alt="slide2">
+              <img src="img/slide/slide3_pc.png" alt="slide3">
             </div>
             <div class="sub_visual">
               <div class="logo l-center">
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div id="facebook"class="facebook l-margin-top">
+        <div id="facebook" class="facebook l-margin-top">
           <div class="facebook_container container l-inner pc_flex sp_flex">
             <h1 class="content_title l-vertical-right">Facebook</h1>
             <div class="article1 article">
