--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta property="og:type" content="blog">
     <meta property="og:description" content="Villa Azure ブルーベリーのお菓子の専門店">
     <meta property="og:title" content="Villa Azure">
-    <meta property="og:url" content="https://kshirakura.github.io/villa_azule/">
-    <meta property="og:image" content="https://kshirakura.github.io/villa_azule/ogp.png">
+    <meta property="og:url" content="https://kshirakura.github.io/villa_azure/">
+    <meta property="og:image" content="https://kshirakura.github.io/villa_azure/ogp.png">
     <meta property="og:site_name" content="Villa Azure">
     <meta property="og:locale" content="ja_JP" />
     <script>
