--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <div id="facebook" class="facebook l-margin-top">
           <div class="facebook_container container l-inner pc_flex sp_flex">
             <h1 class="content_title l-vertical-right">Facebook</h1>
-            <a href="">
-              <div class="article1 article">
+            <a href="" class="article">
+              <div class="article1">
                 <div class="article_img">
                   <img src="img/facebook/article1.jpg" alt="article1">
                 </div>
@@ -107,8 +107,8 @@
                 </div>
               </div>
             </a>
-            <a href="">
-              <div class="article2 article">
+            <a href="" class="article">
+              <div class="article2">
                 <div class="article_img">
                   <img src="img/facebook/article2.jpg" alt="article2">
                 </div>
@@ -121,8 +121,8 @@
                 </div>
               </div>
             </a>
-            <a href="">
-              <div class="article3 article sp_hide">
+            <a href="" class="article sp_hide">
+              <div class="article3  ">
                 <div class="article_img">
                   <img src="img/facebook/article3.jpg" alt="article3">
                 </div>
